Fix for crash in LayoutTest in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=211894

Reviewed by Chris Fleizach.

Several LayoutTests.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityArrayAttributeValues:index:maxCount:]): Check backing object for nullity before dereferencing.


Canonical link: https://commits.webkit.org/224790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261693 268f45cc-cd09-0410-ab3c-d52691b4dbfc